--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>Welcome to my simple web application.</p>
+    <p>Welcome to my simple web application, but it's not simple anymore</p>
 </body>
 </html>
